Добавил сообщение об ошибке при авторизации, чуть изменил окно регистрации

--- a/client/include/auth_window.ui
+++ b/client/include/auth_window.ui
@@ -10,28 +10,30 @@
     <height>192</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>350</width>
+    <height>192</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>350</width>
+    <height>192</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="4" column="0" colspan="2">
-      <widget class="QPushButton" name="loginPushButton">
+     <item row="2" column="0">
+      <widget class="QLabel" name="label">
        <property name="text">
-        <string>Log In</string>
+        <string>Password:</string>
        </property>
       </widget>
-     </item>
-     <item row="5" column="0" colspan="2">
-      <widget class="QPushButton" name="registerPushButton">
-       <property name="text">
-        <string>Register</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QLineEdit" name="lineEdit_2"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
@@ -43,17 +45,48 @@
      <item row="1" column="1">
       <widget class="QLineEdit" name="lineEdit"/>
      </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label">
+     <item row="0" column="1">
+      <widget class="QLabel" name="labelWelcome">
+       <property name="font">
+        <font>
+         <kerning>true</kerning>
+        </font>
+       </property>
+       <property name="toolTip">
+        <string/>
+       </property>
+       <property name="layoutDirection">
+        <enum>Qt::LeftToRight</enum>
+       </property>
        <property name="text">
-        <string>Password:</string>
+        <string>Authorization</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QLabel" name="labelWelcome">
+     <item row="5" column="0" colspan="2">
+      <widget class="QPushButton" name="loginPushButton">
        <property name="text">
-        <string>Authorization</string>
+        <string>Log In</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="0" colspan="2">
+      <widget class="QPushButton" name="registerPushButton">
+       <property name="text">
+        <string>Register</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="lineEdit_2"/>
+     </item>
+     <item row="4" column="0" colspan="2">
+      <widget class="QLabel" name="errorMessage">
+       <property name="text">
+        <string>eeee</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
