делается окно добавления проектов, подправлено окно регистрации пользователя/компании

--- a/client/include/mainwindow.ui
+++ b/client/include/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>629</width>
-    <height>438</height>
+    <width>726</width>
+    <height>432</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,7 +47,7 @@
        <widget class="QPushButton" name="newProjetButton">
         <property name="geometry">
          <rect>
-          <x>510</x>
+          <x>600</x>
           <y>0</y>
           <width>93</width>
           <height>28</height>
@@ -56,6 +56,38 @@
         <property name="text">
          <string>новый проект</string>
         </property>
+       </widget>
+       <widget class="QScrollArea" name="scrollArea">
+        <property name="geometry">
+         <rect>
+          <x>90</x>
+          <y>80</y>
+          <width>251</width>
+          <height>231</height>
+         </rect>
+        </property>
+        <property name="widgetResizable">
+         <bool>true</bool>
+        </property>
+        <widget class="QWidget" name="scrollAreaWidgetContents">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>249</width>
+           <height>229</height>
+          </rect>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_2">
+          <item>
+           <widget class="QPushButton" name="pushButton">
+            <property name="text">
+             <string>PushButton</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
        </widget>
       </widget>
      </widget>
