--- a/client/include/reg_window.ui
+++ b/client/include/reg_window.ui
@@ -10,19 +10,19 @@
     <x>0</x>
     <y>0</y>
     <width>350</width>
-    <height>192</height>
+    <height>250</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>350</width>
-    <height>192</height>
+    <height>250</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>350</width>
-    <height>192</height>
+    <height>250</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -34,43 +34,6 @@
      <property name="sizeConstraint">
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_Password">
-       <property name="text">
-        <string>Password:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="0" colspan="3">
-      <widget class="QPushButton" name="pushButtonSignIn">
-       <property name="text">
-        <string>Sign In</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1" colspan="2">
-      <widget class="QLineEdit" name="passwordLineEdit"/>
-     </item>
-     <item row="1" column="1" colspan="2">
-      <widget class="QLineEdit" name="nameLineEdit"/>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_Confirm">
-       <property name="text">
-        <string>Confirm password:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1" colspan="2">
-      <widget class="QLineEdit" name="confirmLineEdit"/>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_Name">
-       <property name="text">
-        <string>Name:</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="1" colspan="2">
       <widget class="QLabel" name="label_Welcome">
        <property name="text">
@@ -80,6 +43,73 @@
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_Company_name">
+       <property name="text">
+        <string>Company name:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_Password">
+       <property name="text">
+        <string>Password:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1" colspan="2">
+      <widget class="QLineEdit" name="passwordLineEdit"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_Name">
+       <property name="text">
+        <string>Name:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_Surname">
+       <property name="text">
+        <string>Surname:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="0">
+      <widget class="QLabel" name="label_Confirm">
+       <property name="text">
+        <string>Confirm password:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1" colspan="2">
+      <widget class="QLineEdit" name="nameLineEdit"/>
+     </item>
+     <item row="7" column="0" colspan="3">
+      <widget class="QPushButton" name="pushButtonSignIn">
+       <property name="text">
+        <string>Sign In</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1" colspan="2">
+      <widget class="QLineEdit" name="companyNameLineEdit"/>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_Company_bio">
+       <property name="text">
+        <string>Company bio:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1" colspan="2">
+      <widget class="QLineEdit" name="confirmLineEdit"/>
+     </item>
+     <item row="2" column="1" colspan="2">
+      <widget class="QLineEdit" name="surnameLineEdit"/>
+     </item>
+     <item row="4" column="1" colspan="2">
+      <widget class="QLineEdit" name="companyBioLineEdit"/>
      </item>
     </layout>
    </item>
