--- a/client/include/auth_window.ui
+++ b/client/include/auth_window.ui
@@ -29,24 +29,24 @@
    <item>
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="0">
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="loginLabel">
        <property name="text">
         <string>Login:</string>
        </property>
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLineEdit" name="lineEdit_2"/>
+      <widget class="QLineEdit" name="passwordLineEdit"/>
      </item>
      <item row="2" column="0">
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="passwordLabel">
        <property name="text">
         <string>Password:</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit"/>
+      <widget class="QLineEdit" name="loginLineEdit"/>
      </item>
      <item row="0" column="1">
       <widget class="QLabel" name="labelWelcome">
@@ -72,7 +72,7 @@
      <item row="4" column="0" colspan="2">
       <widget class="QLabel" name="errorMessage">
        <property name="text">
-        <string>eeee</string>
+        <string>error</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
