теперь точно рабочая авторизация и регистрация, переход между двумя этими окнами

--- a/client/include/reg_window.ui
+++ b/client/include/reg_window.ui
@@ -92,7 +92,7 @@
       <widget class="QLineEdit" name="passwordLineEdit"/>
      </item>
      <item row="9" column="2">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="pushButtonBack">
        <property name="text">
         <string>Back</string>
        </property>
