--- a/client/include/add_project.ui
+++ b/client/include/add_project.ui
@@ -6,26 +6,58 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>458</width>
-    <height>204</height>
+    <width>420</width>
+    <height>198</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" rowminimumheight="0,0,0">
-   <item row="2" column="1">
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <widget class="QLabel" name="name_label">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>15</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>Project name</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLineEdit" name="name_lineEdit"/>
+   </item>
+   <item row="4" column="0">
     <widget class="QPushButton" name="addProject">
      <property name="text">
-      <string>add</string>
+      <string>Add project</string>
      </property>
     </widget>
    </item>
    <item row="2" column="0">
-    <widget class="QLineEdit" name="description"/>
+    <widget class="QLabel" name="description_label">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>15</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>Description</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QLineEdit" name="name"/>
+   <item row="3" column="0">
+    <widget class="QLineEdit" name="description_lineEdit"/>
    </item>
   </layout>
  </widget>
