--- a/client/include/auth_window.ui
+++ b/client/include/auth_window.ui
@@ -25,33 +25,53 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color:rgb(245, 245, 245);
+</string>
+  </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
+   <property name="topMargin">
+    <number>5</number>
+   </property>
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="1" column="0">
-      <widget class="QLabel" name="loginLabel">
-       <property name="text">
-        <string>Login:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QLineEdit" name="passwordLineEdit"/>
-     </item>
      <item row="2" column="0">
       <widget class="QLabel" name="passwordLabel">
+       <property name="styleSheet">
+        <string notr="true">font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;</string>
+       </property>
        <property name="text">
         <string>Password:</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="loginLineEdit"/>
+      <widget class="QLineEdit" name="loginLineEdit">
+       <property name="styleSheet">
+        <string notr="true">border: 1px solid black;
+     border-radius: 4px;
+background-color: white;</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="passwordLineEdit">
+       <property name="styleSheet">
+        <string notr="true">border: 1px solid black;
+     border-radius: 4px;
+background-color: white;</string>
+       </property>
+      </widget>
      </item>
      <item row="0" column="1">
       <widget class="QLabel" name="labelWelcome">
        <property name="font">
         <font>
+         <family>Yu Gothic UI Semibold</family>
+         <pointsize>8</pointsize>
+         <weight>7</weight>
+         <italic>false</italic>
+         <bold>false</bold>
          <kerning>true</kerning>
         </font>
        </property>
@@ -61,6 +81,9 @@
        <property name="layoutDirection">
         <enum>Qt::LeftToRight</enum>
        </property>
+       <property name="styleSheet">
+        <string notr="true">font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;</string>
+       </property>
        <property name="text">
         <string>Authorization</string>
        </property>
@@ -69,34 +92,105 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="0" colspan="2">
-      <widget class="QLabel" name="errorMessage">
-       <property name="text">
-        <string>error</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
-     </item>
      <item row="2" column="2">
       <widget class="QPushButton" name="showPassword">
+       <property name="styleSheet">
+        <string notr="true">QPushButton {
+     background-color: rgb(216, 216, 216);
+border: 1px black;
+     border-radius: 4px;
+	font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;
+width:93px;
+height:21px;
+}
+QPushButton:hover{
+border: 0.5px solid rgb(0, 170, 255);
+}</string>
+       </property>
        <property name="text">
         <string>show</string>
        </property>
       </widget>
      </item>
-     <item row="5" column="0" colspan="3">
-      <widget class="QPushButton" name="loginPushButton">
+     <item row="1" column="0">
+      <widget class="QLabel" name="loginLabel">
+       <property name="styleSheet">
+        <string notr="true">font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;</string>
+       </property>
        <property name="text">
-        <string>Log In</string>
+        <string>Login:</string>
        </property>
       </widget>
      </item>
      <item row="6" column="0" colspan="3">
       <widget class="QPushButton" name="registerPushButton">
+       <property name="styleSheet">
+        <string notr="true">QPushButton {
+     background-color: rgb(80, 108, 200);
+	color: white;
+border: 1px black;
+
+     border-radius: 4px;
+	font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;
+width:326px;
+height:26px;
+}
+QPushButton:hover{
+border: 1px solid rgb(255, 255, 255);
+}</string>
+       </property>
        <property name="text">
         <string>Register</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0" colspan="3">
+      <widget class="QPushButton" name="loginPushButton">
+       <property name="styleSheet">
+        <string notr="true">QPushButton {
+     background-color: rgb(80, 108, 200);
+	color: white;
+border: 1px black;
+
+     border-radius: 4px;
+	font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;
+width:326px;
+height:26px;
+}
+
+QPushButton:hover{
+border: 1px solid rgb(255, 255, 255);
+}</string>
+       </property>
+       <property name="text">
+        <string>Log In</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="2">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>23</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="4" column="1">
+      <widget class="QLabel" name="errorMessage">
+       <property name="styleSheet">
+        <string notr="true">color: red;
+font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;</string>
+       </property>
+       <property name="text">
+        <string>error</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
