да что происходит

--- a/client/images.qrc
+++ b/client/images.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file>img/ls1.png</file>
         <file>img/project.png</file>
+        <file>img/chat.png</file>
+        <file>img/settings.png</file>
     </qresource>
 </RCC>
