--- a/client/include/add_task.ui
+++ b/client/include/add_task.ui
@@ -23,7 +23,8 @@
      <item row="0" column="0">
       <widget class="QLabel" name="task_name">
        <property name="styleSheet">
-        <string notr="true">font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;</string>
+        <string notr="true">color: rgb(80, 108, 200);
+font: 87 10pt &quot;Arial Black&quot;;</string>
        </property>
        <property name="text">
         <string>Task name</string>
@@ -45,7 +46,8 @@ background-color: white;</string>
      <item row="4" column="0">
       <widget class="QLabel" name="task_deadline">
        <property name="styleSheet">
-        <string notr="true">font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;</string>
+        <string notr="true">color: rgb(80, 108, 200);
+font: 87 10pt &quot;Arial Black&quot;;</string>
        </property>
        <property name="text">
         <string>Deadline</string>
@@ -73,7 +75,7 @@ background-color: white;</string>
 border: 1px black;
 
      border-radius: 4px;
-	font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;
+	font: 63 10pt &quot;Yu Gothic UI Semibold&quot;;
 width:326px;
 height:26px;
 }
@@ -89,7 +91,8 @@ border: 1px solid rgb(255, 255, 255);
      <item row="2" column="0">
       <widget class="QLabel" name="task_description">
        <property name="styleSheet">
-        <string notr="true">font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;</string>
+        <string notr="true">color: rgb(80, 108, 200);
+font: 87 10pt &quot;Arial Black&quot;;</string>
        </property>
        <property name="text">
         <string>Descriprion</string>
