--- a/client/include/auth_window.ui
+++ b/client/include/auth_window.ui
@@ -39,7 +39,7 @@
       <widget class="QLabel" name="errorMessage">
        <property name="styleSheet">
         <string notr="true">color: red;
-font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;</string>
+font: 63 10pt &quot;Yu Gothic UI Semibold&quot;;</string>
        </property>
        <property name="text">
         <string>error</string>
@@ -56,7 +56,7 @@ font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;</string>
      background-color: rgb(216, 216, 216);
 border: 1px black;
      border-radius: 4px;
-	font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;
+	font: 63 10pt &quot;Yu Gothic UI Semibold&quot;;
 width:93px;
 height:21px;
 }
@@ -94,7 +94,8 @@ background-color: white;</string>
      <item row="1" column="0">
       <widget class="QLabel" name="loginLabel">
        <property name="styleSheet">
-        <string notr="true">font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;</string>
+        <string notr="true">color: rgb(80, 108, 200);
+font: 87 10pt &quot;Arial Black&quot;;</string>
        </property>
        <property name="text">
         <string>Login:</string>
@@ -104,7 +105,8 @@ background-color: white;</string>
      <item row="2" column="0">
       <widget class="QLabel" name="passwordLabel">
        <property name="styleSheet">
-        <string notr="true">font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;</string>
+        <string notr="true">color: rgb(80, 108, 200);
+font: 87 10pt &quot;Arial Black&quot;;</string>
        </property>
        <property name="text">
         <string>Password:</string>
@@ -129,7 +131,7 @@ background-color: white;</string>
 border: 1px black;
 
      border-radius: 4px;
-	font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;
+	font: 63 10pt &quot;Yu Gothic UI Semibold&quot;;
 width:326px;
 height:26px;
 }
@@ -152,7 +154,7 @@ border: 1px solid rgb(255, 255, 255);
 border: 1px black;
 
      border-radius: 4px;
-	font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;
+	font: 63 10pt &quot;Yu Gothic UI Semibold&quot;;
 width:326px;
 height:26px;
 }
@@ -169,9 +171,9 @@ border: 1px solid rgb(255, 255, 255);
       <widget class="QLabel" name="labelWelcome">
        <property name="font">
         <font>
-         <family>Yu Gothic UI Semibold</family>
-         <pointsize>8</pointsize>
-         <weight>7</weight>
+         <family>Arial Black</family>
+         <pointsize>10</pointsize>
+         <weight>10</weight>
          <italic>false</italic>
          <bold>false</bold>
          <kerning>true</kerning>
@@ -184,7 +186,8 @@ border: 1px solid rgb(255, 255, 255);
         <enum>Qt::LeftToRight</enum>
        </property>
        <property name="styleSheet">
-        <string notr="true">font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;</string>
+        <string notr="true">color: rgb(80, 108, 200);
+font: 87 10pt &quot;Arial Black&quot;;</string>
        </property>
        <property name="text">
         <string>Authorization</string>
