--- a/client/include/mainwindow.ui
+++ b/client/include/mainwindow.ui
@@ -29,8 +29,8 @@
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout_2">
-    <item>
+   <layout class="QGridLayout" name="gridLayout_2">
+    <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="styleSheet">
        <string notr="true">QTabWidget:tab-bar
@@ -43,17 +43,168 @@
 </string>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab_2">
+       <property name="styleSheet">
+        <string notr="true">background-color:rgb(247, 247, 247)</string>
+       </property>
        <attribute name="title">
         <string>Chat</string>
        </attribute>
-       <layout class="QGridLayout" name="gridLayout">
-        <item row="0" column="0">
-         <widget class="QPushButton" name="pushButton_2">
+       <layout class="QVBoxLayout" name="verticalLayout_6">
+        <item>
+         <layout class="QGridLayout" name="gridLayout">
+          <item row="6" column="0">
+           <widget class="QLabel" name="role">
+            <property name="layoutDirection">
+             <enum>Qt::LeftToRight</enum>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">color: rgb(80, 108, 200);
+font: 87 20pt &quot;Arial Black&quot;;</string>
+            </property>
+            <property name="text">
+             <string>Role:</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="name">
+            <property name="styleSheet">
+             <string notr="true">color: rgb(80, 108, 200);
+font: 87 20pt &quot;Arial Black&quot;;</string>
+            </property>
+            <property name="text">
+             <string>Name:</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="surname">
+            <property name="styleSheet">
+             <string notr="true">color: rgb(80, 108, 200);
+font: 87 20pt &quot;Arial Black&quot;;</string>
+            </property>
+            <property name="text">
+             <string>Surname:</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QLabel" name="email">
+            <property name="styleSheet">
+             <string notr="true">color: rgb(80, 108, 200);
+font: 87 20pt &quot;Arial Black&quot;;</string>
+            </property>
+            <property name="text">
+             <string>Email:</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QLabel" name="email_">
+            <property name="styleSheet">
+             <string notr="true">color: rgb(80, 108, 200);
+font: 87 20pt &quot;Arial Black&quot;;</string>
+            </property>
+            <property name="text">
+             <string>TextLabel</string>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="1">
+           <widget class="QLabel" name="role_">
+            <property name="styleSheet">
+             <string notr="true">color: rgb(80, 108, 200);
+font: 87 20pt &quot;Arial Black&quot;;</string>
+            </property>
+            <property name="text">
+             <string>TextLabel</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="1">
+           <widget class="QLabel" name="company_">
+            <property name="styleSheet">
+             <string notr="true">color: rgb(80, 108, 200);
+font: 87 20pt &quot;Arial Black&quot;;</string>
+            </property>
+            <property name="text">
+             <string>TextLabel</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QLabel" name="name_">
+            <property name="styleSheet">
+             <string notr="true">color: rgb(80, 108, 200);
+font: 87 20pt &quot;Arial Black&quot;;</string>
+            </property>
+            <property name="text">
+             <string>t</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="0">
+           <widget class="QLabel" name="company">
+            <property name="styleSheet">
+             <string notr="true">color: rgb(80, 108, 200);
+font: 87 20pt &quot;Arial Black&quot;;</string>
+            </property>
+            <property name="text">
+             <string>Company name:</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QLabel" name="surname_">
+            <property name="styleSheet">
+             <string notr="true">color: rgb(80, 108, 200);
+font: 87 20pt &quot;Arial Black&quot;;</string>
+            </property>
+            <property name="text">
+             <string>TextLabel</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <widget class="QPushButton" name="add_user_button">
+          <property name="styleSheet">
+           <string notr="true">QPushButton {
+     background-color: rgb(80, 108, 200);
+	color: white;
+border: 1px black;
+
+     border-radius: 4px;
+	font: 63 20pt &quot;Yu Gothic UI Semibold&quot;;
+width:326px;
+height:40px;
+}
+
+QPushButton:hover{
+border: 1px solid rgb(255, 255, 255);
+}</string>
+          </property>
           <property name="text">
-           <string>PushButton</string>
+           <string>Add user to company</string>
           </property>
          </widget>
         </item>
@@ -76,7 +227,7 @@ background-color: rgb(80, 108, 200);
 border: 1px black;
      border-radius: 4px;
 	height:26px;
-	font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;
+	font: 63 10pt &quot;Yu Gothic UI Semibold&quot;;
 }
 
 
@@ -113,8 +264,8 @@ border: 1px solid rgb(102, 137, 254)
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>1098</width>
-             <height>523</height>
+             <width>1078</width>
+             <height>501</height>
             </rect>
            </property>
            <layout class="QFormLayout" name="formLayout">
@@ -140,24 +291,70 @@ border: 1px solid rgb(102, 137, 254)
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
          <widget class="QScrollArea" name="scrollArea_2">
-          <property name="styleSheet">
-           <string notr="true">background-color:rgb(252, 252, 252)</string>
-          </property>
           <property name="widgetResizable">
            <bool>true</bool>
           </property>
-          <widget class="QWidget" name="messages">
+          <property name="alignment">
+           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+          </property>
+          <widget class="QWidget" name="scrollAreaWidgetContents_3">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>1098</width>
-             <height>522</height>
+             <width>1078</width>
+             <height>503</height>
             </rect>
            </property>
-           <layout class="QVBoxLayout" name="verticalLayout_5">
-            <item>
-             <layout class="QVBoxLayout" name="messages_scroll"/>
+           <property name="styleSheet">
+            <string notr="true">QLabel{
+color: rgb(80, 108, 200);
+font:13px;
+qproperty-alignment: AlignCenter;
+}
+QPushButton{
+color: rgb(80, 108, 200);
+font:13px &quot;Arial Black&quot;;;
+background-color: white;
+border-radius: 4px;
+border: 0.5px solid  rgb(80, 108, 200);
+
+
+}
+
+</string>
+           </property>
+           <layout class="QFormLayout" name="formLayout_3">
+            <item row="0" column="0">
+             <spacer name="verticalSpacer">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="1" column="0" colspan="2">
+             <layout class="QVBoxLayout" name="messages">
+              <item>
+               <widget class="QPushButton" name="pushButton">
+                <property name="text">
+                 <string>PushButton</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="label">
+                <property name="text">
+                 <string>TextLabel</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
            </layout>
           </widget>
@@ -166,27 +363,21 @@ border: 1px solid rgb(102, 137, 254)
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <item>
-           <widget class="QTextEdit" name="message">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>1000</width>
-              <height>25</height>
-             </size>
-            </property>
+           <widget class="QLineEdit" name="message">
             <property name="styleSheet">
-             <string notr="true">height:50px;
-background-color:white;</string>
+             <string notr="true">border: 1px solid black;
+     border-radius: 4px;
+background-color: white;
+height:24px;
+</string>
+            </property>
+            <property name="text">
+             <string/>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="send_button">
+           <widget class="QPushButton" name="send_message">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>200</horstretch>
@@ -207,7 +398,7 @@ border: 1px black;
      border-radius: 4px;
 	height:26px;
 	width: 200px;
-	font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;
+	font: 63 10pt &quot;Yu Gothic UI Semibold&quot;;
 }
 
 
@@ -226,7 +417,7 @@ border: 1px solid rgb(255, 255, 255);
       </widget>
      </widget>
     </item>
-    <item>
+    <item row="1" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <spacer name="horizontalSpacer_3">
