--- a/client/include/projectwindow.ui
+++ b/client/include/projectwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>660</width>
+    <width>689</width>
     <height>440</height>
    </rect>
   </property>
@@ -18,13 +18,13 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>660</width>
+    <width>689</width>
     <height>440</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>660</width>
+    <width>689</width>
     <height>440</height>
    </size>
   </property>
@@ -34,8 +34,8 @@
   <property name="styleSheet">
    <string notr="true">background-color: rgb(251, 251, 251)</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
-   <item>
+  <layout class="QGridLayout" name="gridLayout_2">
+   <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout">
      <item row="2" column="0">
       <widget class="QLabel" name="TODO">
@@ -44,8 +44,7 @@
 background-color: white;
 border-radius: 4px;
 border: 0.5px solid  rgb(80, 108, 200);
-font: 87 8pt &quot;Arial Black&quot;;
-</string>
+font: 87 10pt &quot;Arial Black&quot;;</string>
        </property>
        <property name="text">
         <string>TO DO</string>
@@ -62,7 +61,7 @@ font: 87 8pt &quot;Arial Black&quot;;
 background-color: white;
 border-radius: 4px;
 border: 0.5px solid  rgb(80, 108, 200);
-font: 87 8pt &quot;Arial Black&quot;;</string>
+font: 87 10pt &quot;Arial Black&quot;;</string>
        </property>
        <property name="text">
         <string>DONE</string>
@@ -97,10 +96,14 @@ font: 87 8pt &quot;Arial Black&quot;;</string>
          <property name="styleSheet">
           <string notr="true">background-color: white;
 border-radius: 8px;
-border: 0.5px solid rgb(80, 108, 200);</string>
+border: 0.5px solid rgb(80, 108, 200);
+</string>
          </property>
          <property name="widgetResizable">
           <bool>true</bool>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignHCenter|Qt::AlignTop</set>
          </property>
          <widget class="QWidget" name="scrollAreaWidgetContents_4">
           <property name="geometry">
@@ -108,8 +111,11 @@ border: 0.5px solid rgb(80, 108, 200);</string>
             <x>0</x>
             <y>0</y>
             <width>206</width>
-            <height>338</height>
+            <height>340</height>
            </rect>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">color: rgb(80, 108, 200);</string>
           </property>
           <widget class="QWidget" name="verticalLayoutWidget_2">
            <property name="geometry">
@@ -154,21 +160,27 @@ border: 0.5px solid rgb(80, 108, 200);</string>
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
+         <property name="alignment">
+          <set>Qt::AlignHCenter|Qt::AlignTop</set>
+         </property>
          <widget class="QWidget" name="scrollAreaWidgetContents_2">
           <property name="geometry">
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>198</width>
-            <height>338</height>
+            <width>206</width>
+            <height>340</height>
            </rect>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">color: rgb(80, 108, 200);</string>
           </property>
           <widget class="QWidget" name="verticalLayoutWidget">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>201</width>
+             <width>211</width>
              <height>341</height>
             </rect>
            </property>
@@ -183,15 +195,15 @@ border: 0.5px solid rgb(80, 108, 200);</string>
       <widget class="QPushButton" name="project_chat">
        <property name="styleSheet">
         <string notr="true">QPushButton {
-background-color: rgb(80, 108, 200);
+     background-color: rgb(80, 108, 200);
 	color: white;
 border: 1px black;
+
      border-radius: 4px;
-	height:28px;
-	font: 63 8pt &quot;Yu Gothic UI Semibold&quot;;
+	font: 63 10pt &quot;Yu Gothic UI Semibold&quot;;
+width:210px;
+height:26px;
 }
-
-
 QPushButton:hover{
 border: 1px solid rgb(255, 255, 255);
 }</string>
@@ -234,8 +246,11 @@ border: 0.5px solid rgb(80, 108, 200);</string>
             <x>0</x>
             <y>0</y>
             <width>206</width>
-            <height>338</height>
+            <height>340</height>
            </rect>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">color: rgb(80, 108, 200);</string>
           </property>
           <widget class="QWidget" name="verticalLayoutWidget_3">
            <property name="geometry">
@@ -266,7 +281,7 @@ border: 0.5px solid rgb(80, 108, 200);</string>
 background-color: white;
 border-radius: 4px;
 border: 0.5px solid  rgb(80, 108, 200);
-font: 87 8pt &quot;Arial Black&quot;;</string>
+font: 87 10pt &quot;Arial Black&quot;;</string>
        </property>
        <property name="text">
         <string>IN PROGRESS</string>
@@ -286,7 +301,7 @@ font: 87 8pt &quot;Arial Black&quot;;</string>
        </property>
        <property name="styleSheet">
         <string notr="true">color: rgb(80, 108, 200);
-font: 87 8pt &quot;Arial Black&quot;;</string>
+font: 87 10pt &quot;Arial Black&quot;;</string>
        </property>
        <property name="text">
         <string>Project Name</string>
